<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="textVazio"></string>

    <string name="app_name">HandCoach</string>
    <string name="action_settings">Settings</string>
    
    <!-- Posições -->
    <string name="goleiro">Goleiro</string>
    <string name="ponta">Ponta</string>
    <string name="meia">Meia</string>
    <string name="armador">Armador Central</string>
    <string name="pivo">Pivô</string>
    
    <!-- Tela Nav -->
    <string name="telaNav_btPartidas">Partidas</string>
    <string name="telaNav_btTreinos">Treinos</string>
    <string name="telaNav_btSobre">Sobre</string>
    <string name="telaNav_btStats">Estatísticas</string>
    
    <!-- Alertas Tela Nav -->
    <string name="tituloAlertaTreinos">Treinamentos</string>
    <string name="tituloAlertaEstatisticas">Estatísticas</string>
    <string name="msgAlertaTreino">Funcionalidade não disponível para essa versão. Adquira HandCoach PRO!</string>
    <string name="btAlertatreino">OK</string>
    
    <!-- Tela Sobre -->
    <string name="telaSobre_desenvolvimentoTitulo">Desenvolvido por:</string>
    <string name="telaSobre_idiomasTitulo">Idiomas suportados:</string>
    <string name="telaSobre_agradecimentosTitulo">Agradecimentos especiais aos professores:</string>
    <string name="telaSobre_informacoes">Maiores informações:</string>
    <string name="telaSobre_desenvolvimento">Pedro Nakamura</string>
    <string name="telaSobre_idiomas">Português (BR) - Inglês - Espanhol</string>
    <string name="telaSobre_agradecimentos">Walter Jr. Bicca; Luis Zeni; Rodrigo Remor e Bianca Ruskowski</string>
    
    <!-- Alertas Tela Sobre -->
    <string name="tituloAlertaSobre">Sobre o aplicativo:</string>
    <string name="msgAlertaSobre">Deseja acessar um link com maiores informações sobre HandCoach?</string>
    <string name="btSimAlertaSobre">Sim</string>
    <string name="btNaoAlertaSobre">Não</string>
    
    <!-- TelaPartidas -->
    <string name="telaPartidasTitulo">Partidas</string>
    <string name="btMenuScoutingPartida">Nova Partida</string>
    <string name="btMenuCadastroEquipes">Gerir Equipes</string>
    <string name="btMenuCadastroJogadores">Gerir Jogadores</string>
    <string name="btMenuTorneios">Competições</string>
    <string name="tituloAlertaTorneios">Competições</string>
    
    <!-- MenuEquipes e EquipesAdv -->
    <string name="TituloEscolhaTipoEquipe">Escolha o tipo de equipe:</string>
    <string name="EquipeEquipe">Suas equipes</string>
    <string name="EquipeAdv">Adversários</string>
    
    <!-- CadastroEquipesAdv -->
    <string name="TituloTelaCadastroEqAdv">Equipes Adversárias</string>
    <string name="EquipeAdvAdicionada">Equipe adversária adicionada!</string>
    
    <!-- CadastroEquipes -->
    <string name="TituloTelaCadastroEq">Cadastro Equipes</string>
    <string name="TituloTelaEditarEq">Editar Equipe</string>
    <string name="CadastroEqNome">Nome da Equipe:</string>
    <string name="btCadastrar">Cadastrar!</string>
    <string name="CadastroEqLista">Equipes:</string>
    <string name="EquipeAdicionada">Equipe adicionada!</string>
    <string name="btAtualizar">Atualizar</string>
    <string name="btDeletar">Deletar</string>
    <string name="alertaAtualizado">Atualizado!</string>
    <string name="alertaDeletado">Deletado!</string>
    <string name="cadastrarEquipes">Nova equipe</string>
    
    <!-- Aviso Cadastro Jog -->
    <string name="CadastroEscolhaEq">Escolha uma equipe:</string>
    <string name="AlertaJogCadastro">Jogador adicionado!</string>
    <string name="AlertaCtzDelete">Confirma exclusão?</string>
    
    <!-- CadastroJogadores -->
    <string name="TituloTelaCadastroJog">Cadastro Jogador</string>
    <string name="TituloListaJogadores">Jogadores da Equipe</string>
    <string name="btNovoJogador">Novo Jogador</string>
    <string name="JogadorPosicao">Posição</string>
    <string name="JogadorEdit">Editar Jogadores</string>
    <string name="JogadorEditNome">Nome:</string>
    <string name="JogadorEditSexo">Sexo:</string>
    <string name="JogadorEditFoto">Foto:</string>
    <string name="JogadorEditAltura">Altura:</string>
    <string name="JogadorEditTextAltura">Em centímetros</string>
    <string name="JogadorEditDT_Nasc">Data de Nascimento:</string>
    <string name="JogadorEditTextDT">dd/mm/aaaa</string>
    <string name="JogadorMasculino">Masculino</string>
    <string name="JogadorFeminino">Feminino</string>
    <string name="ErroCadastroData">Há um erro na data! Utilize o padrão dd/mm/aaaa</string>
    <string name="ErroCadastroAltura">Há um erro na altura! Digite apenas números e em centímetros</string>
    
    <!-- MenuScouting -->
    <string name="TituloMenuScouting">Pré-Jogo</string>
    <string name="tv_suaequipe_ms">Sua equipe:</string>
    <string name="tv_adv_ms">Adversário:</string>
    <string name="tv_local_ms">Local:</string>
    <string name="btiniciarpartida">Iniciar partida!</string>
    <string name="autoCompleteLocal">Local da partida</string>
    
    <!-- Pré Jogo -->
    <string name="btTacaLePauNessaPartida">Começar partida!</string>
    <string name="titulares">Titulares</string>
    <string name="reservas">Reservas</string>
    <string name="avisoTitInsuf">Por favor, escolha 7 titulares</string>
    
    <!-- Avisos variados -->
    <string name="stringSelecionado">Marcado!</string>
    <string name="stringDesSelecionado">Desmarcado!</string>
    <string name="tempoAcabando">O tempo está acabando!</string>
    <string name="tempoAcabou">O tempo acabou!</string>
    <string name="tempo">Tempo!</string>
    <string name="PlayPauseClick">Clique no play para voltar ao jogo!</string>
    
    <!--  TelaScouting -->
    <string name="ComBola">Com Bola</string>
    <string name="SemBola">Sem Bola</string>
    <string name="initScouting">Clique, quando iniciar o jogo, na posse de bola de sua equipe!</string>
    <string name="limiteTempo">Apenas dois tempos por período são permitidos!</string>
    <string name="segundoTempo">Clique no play/pause para terminar a partida!</string>
    <!--  Botões! OnNonPlaying/OnPlaying -->
    <string name="btRebote">Rebote</string>
    <string name="btFalta">Falta</string>
    <string name="btRoubada">Desarme</string>
    <string name="btGanhoBola">Ganho de bola</string>
    <string name="btCtAmarelo">Cartão Amarelo</string>
    <string name="bt2min">Dois minutos</string>
    <string name="btPerdaBola">Perda de Bola</string>
    <string name="btArremesso">Arremesso</string>
    <string name="btGolAdv">Gol adversário</string>
    
    <!--  Actions OnNonPlaying/OnPlaying -->
    <string name="faltatecnica">Falta técnica</string>
    <string name="falta7m">7 metros</string>
    <string name="faltadefesa">Falta de defesa</string>
    <string name="faltaatk">Falta de ataque</string>
    <string name="gol">Gol</string>
    <string name="GK">Goleiro defendeu</string>
    <string name="fora">Pra fora</string>
    <string name="defense">Na defesa</string>
    <string name="passerrado">Passe errado</string>
    <string name="rcperrada">Recepção errada</string>
    
    <!--  Coisas extras -->
    <string name="TempoDeJogo">Tempo da partida (em minutos):</string>
    <string name="avisoTempoJogo">Por favor, insira um tempo de partida</string>
    <string name="faltaSofrida">Falta sofrida</string>
    <string name="avisoFimFim">Pause para terminar</string>
    <string name="desarme">Desarme</string>
    
    <!--  Estatísticas -->
    <string name="ultimasPartidas">últimas partidas</string>
    <string name="verStatsJogadores">ver as estatísticas dos jogadores</string>
    <string name="verStatsEquipes">ver as estatísticas da equipe</string>
    <string name="relacaoGols">Gols feitos/Gols sofridos</string>
    
    <!--  Stats -->
    <string name="arremessos">Arremessos</string>
    <string name="passes">Passes</string>
    <string name="recepcoes">Recepções</string>
    <string name="faltas">Faltas</string>
    <string name="soffaltas">Faltas sofridas</string>
    <string name="artilheiro">Artilheiro</string>
    <string name="melhorpassador">Melhor passador</string>
    <string name="maisfaltoso">Mais faltoso</string>
    <string name="maisrecep">Melhor receptor</string>

    <!--  avisos Stats -->
    <string name="avisoPartida">Jogar ao menos uma partida para preencher estatísticas</string>
    <string name="verStatsData">Ver a evolução dos jogadores</string>
    <string name="passecerto">Passe certo</string>
    <string name="rcpcerta">Recepção certa</string>
    <string name="sofreatk">Sofreu falta no ataque</string>
    <string name="sofredef">Sofreu falta na defesa</string>
    
    <string name="compararJogadores">ver comparações entre jogadores</string>
    <string name="comparar">Comparar!</string>
    <string name="avisoComparacao">Favor escolher dois ou no máximo cinco jogadores para comparação!</string>
    <string name="terminarPartida">Terminar partida!</string>
    
    <string name="deixarPartida">Deixar partida</string>
    <string name="deixarPartidaConf">Deseja deixar partida e excluí-la?</string>
    
    <string name="partidas">Partidas</string>
    
</resources>
