<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btGanhoSB"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignRight="@+id/btCtAmareloSB"
        android:layout_alignTop="@+id/btFaltaSB"
        android:text="@string/btGanhoBola" />

    <Button
        android:id="@+id/bt2minSB1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/btFaltaSB"
        android:layout_alignTop="@+id/btCtAmareloSB"
        android:text="@string/bt2min" />

    <Button
        android:id="@+id/btRoubadaSB"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/bt2minSB1"
        android:text="@string/btRoubada" />

    <Button
        android:id="@+id/btCtAmareloSB"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="21dp"
        android:text="@string/btCtAmarelo" />

    <Button
        android:id="@+id/btGolAdvSB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btRoubadaSB"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:text="@string/btGolAdv" />

    <Button
        android:id="@+id/btFaltaSB"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/btReboteSB"
        android:text="@string/btFalta" />

    <Button
        android:id="@+id/btReboteSB"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/btCtAmareloSB"
        android:text="@string/btRebote" />

</RelativeLayout>
