<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFAFAF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/tv_JogadorEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StringTituloTela"
            android:text="@string/JogadorEdit" />

        <TextView
            android:id="@+id/espacoBnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <TextView
            android:id="@+id/tv_nomeEditarJogador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JogadorEditNome" />

        <EditText
            android:id="@+id/editText_jogadorEditNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/espacoBnc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <TextView
            android:id="@+id/tv_jogadorEditSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JogadorEditSexo"/>

        <EditText
            android:id="@+id/editText_jogadorEditSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/espacoBnc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <TextView
            android:id="@+id/tv_jogadorEditAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JogadorEditAltura" />

        <EditText
            android:id="@+id/editText_jogadorEditAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/espacoBnc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <TextView
            android:id="@+id/tv_jogadorEditDT_Nasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JogadorEditDT_Nasc" />

        <EditText
            android:id="@+id/editText_jogadorEditDT_Nasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/btEditJogador_Atualiza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btAtualizar" />

        <Button
            android:id="@+id/btEditJogador_Deleta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDeletar" />

    </LinearLayout>

</LinearLayout>
