<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFAFAF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp" >

        <TextView
            android:id="@+id/tituloTelaEditarEq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StringTituloTela"
            android:text="@string/TituloTelaEditarEq" />

        <TextView
            android:id="@+id/textEspacoBranco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <TextView
            android:id="@+id/tv_telaCadastroEqNome"
            style="@style/StringTelaSobreStyle_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CadastroEqNome" />

        <EditText
            android:id="@+id/editText_editarNomeEq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textEspacoBranco2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <Button
            android:id="@+id/btAtualizarEquipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btAtualizar" />

        <Button
            android:id="@+id/btDeletarEquipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDeletar" />

    </LinearLayout>

</LinearLayout>
