<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.22"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titutoTelaCadastroEq"
            style="@style/StringTituloTela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TituloTelaCadastroEq" />

        <TextView
            android:id="@+id/textVazio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <TextView
            android:id="@+id/textVazio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVazio" />

        <TextView
            android:id="@+id/tv_cadastroEqLista"
            style="@style/StringTelaSobreStyle_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CadastroEqLista" />

        <ListView
            android:id="@+id/listEquipeCadastrada"
            android:layout_width="fill_parent"
            android:layout_height="266dp"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp" >
        </ListView>

        <Button
            android:id="@+id/botaoTelaCadastroEq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrarEquipes" />
    </LinearLayout>

</LinearLayout>